resolved overflow issue for mobile flexii hero

--- a/projects/flexii/flexii-style.css
+++ b/projects/flexii/flexii-style.css
@@ -83,7 +83,8 @@ html, body {
  /* Hero Section */
 
 .hero {
-background-color: #f1f1f1;  height: calc(100svh - 3rem);
+background-color: #f1f1f1;  
+height: calc(100svh - 3rem);
 }
   
 .hero-logo {
@@ -105,10 +106,8 @@ background-color: #f1f1f1;  height: calc(100svh - 3rem);
 
 .hero-body {
     display: flex;
-    overflow: hidden;
     justify-content: center;
-    height: 100%; /* Prevent overflowing the parent */
-
+    height: calc(100svh - 3rem);
 }
 
 
@@ -117,6 +116,7 @@ background-color: #f1f1f1;  height: calc(100svh - 3rem);
     flex-direction: column;
     justify-content: center;
     align-content: center;
+    height: 100%;
 }
 
 .hero-text-wrapper {
@@ -230,7 +230,7 @@ li {
     .hero-body {
         flex-direction:column-reverse;
         padding: 2rem 1rem 2rem 1rem;
-        justify-content: center;
+        justify-content: flex-start;
         text-align: center;
     }
 
@@ -243,19 +243,19 @@ li {
       justify-content: flex-start;
       padding: 0;
       gap: 1rem;
+      width: auto;
     }
 
+    .hero-wrapper{
+      height: 60vh;
+    }
     .hero-logo {
         width: 100%;
     }
 
     .hero-logo img {
       width: 60%;
-  }
-
-  .hero-wrapper{
-    height: auto;
-  }
+    }
   
     
     .main-layout {
